<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- TODO Design task-1 screen here -->
    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="İstanbul"
        android:textSize="@dimen/text_size_large"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        />

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Bugün"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_today"
        app:layout_constraintBottom_toTopOf="@id/icon_day1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:src="@drawable/ic_sunny"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="26°"
            android:textSize="@dimen/text_size_xlarge"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_below="@id/weather_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_xlarge"
            />

        <TextView
            android:id="@+id/tv_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Güneşli"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="sans-serif-medium"
            android:layout_below="@id/tv_temperature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium"
            />
        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rüzgar"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif-medium"
            android:layout_below="@id/tv_weather_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_xlarge"
            />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 km/s"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif"
            android:drawableLeft="@drawable/ic_wind"
            android:drawablePadding="@dimen/margin_xsmall"
            android:layout_below="@id/tv_wind"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_small"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date1"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/tv_day2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        />

    <ImageView
        android:id="@+id/icon_day1"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:src="@drawable/ic_sunny"
        app:layout_constraintTop_toTopOf="@id/tv_day1"
        app:layout_constraintBottom_toBottomOf="@id/tv_day1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_temp_day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/tv_day1"
        app:layout_constraintBottom_toBottomOf="@id/tv_day1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        />

    <TextView
        android:id="@+id/tv_day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date2"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/tv_day3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        />

    <ImageView
        android:id="@+id/icon_day2"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintTop_toTopOf="@id/tv_day2"
        app:layout_constraintBottom_toBottomOf="@id/tv_day2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_temp_day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/tv_day2"
        app:layout_constraintBottom_toBottomOf="@id/tv_day2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        />

    <TextView
        android:id="@+id/tv_day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date3"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/tv_day4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        />

    <ImageView
        android:id="@+id/icon_day3"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:src="@drawable/ic_sunny"
        app:layout_constraintTop_toTopOf="@id/tv_day3"
        app:layout_constraintBottom_toBottomOf="@id/tv_day3"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_temp_day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/tv_day3"
        app:layout_constraintBottom_toBottomOf="@id/tv_day3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        />

    <TextView
        android:id="@+id/tv_day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date4"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xlarge"
        />

    <ImageView
        android:id="@+id/icon_day4"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:src="@drawable/ic_rainy"
        app:layout_constraintTop_toTopOf="@id/tv_temp_day4"
        app:layout_constraintBottom_toBottomOf="@id/tv_temp_day4"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_temp_day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="@id/tv_day4"
        app:layout_constraintBottom_toBottomOf="@id/tv_day4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        />

</androidx.constraintlayout.widget.ConstraintLayout>